SERVER-10201 DistributedLockPinger::shouldKill not thread safe (sync6.js failure)